<resources>
    <string name="app_name">Easyquize</string>

    <string name="true_btn">True</string>
    <string name="false_btn">False</string>
    <string name="next_btn">Next</string>
    <string name="cheat_btn">Cheat</string>
    <string name="showAnswer_btn">Show Answer</string>
    <string name="correct_toast">Correct</string>
    <string name="incorrect_toast">Incorrect</string>
    <string name="cheater_toast">how dare you cheater</string>
    <string name="warning_textview">are you sure?</string>

    <string name="Q1">The river Seine in Paris is longer than the river Thames in London</string>
    <string name="Q2">H and M stands for Hennes Mauritz</string>
    <string name="Q3"> Canis lupur is the scientific name for a wolf</string>
    <string name="Q4">kwejhgfjiesgfhfjksh?</string>


</resources>